Fix: style conflict with LearnPress
1. Dropdown item options was not showing when LearnPress is installed.
2. `wpuf-form-builder.css` was loading multiple times
3. removed font-family assigning style from WPUF. font family should be come from theme or WP core.

--- a/admin/form-builder/assets/less/form-builder.less
+++ b/admin/form-builder/assets/less/form-builder.less
@@ -867,6 +867,12 @@
                 }
             }
         }
+
+        /* fix for conflict with LearnPress */
+        ul li.clearfix{
+            opacity: initial;
+            height: initial;
+        }
     }
 }
 
