--- a/assets/less/frontend-forms.less
+++ b/assets/less/frontend-forms.less
@@ -5,7 +5,6 @@
 @mediaMD: 1200px;
 /* DivTable.com */
 body {
-    font-family: 'Open Sans', sans-serif;
 #wpfooter {
     position: fixed  !important
 }
@@ -1375,7 +1374,6 @@ body.rtl{
     }
 }
 .wpuf-dashboard-container {
-    font-family: 'Open Sans', sans-serif;
     max-width: 85rem !important;
     .clearfix();
     .wpuf-dashboard-navigation {
@@ -1385,7 +1383,6 @@ body.rtl{
         a {
             text-decoration: none;
             box-shadow: none;
-            font-family: 'Open Sans', sans-serif;
             font-size: 16px;
             font-weight: bold;
             color: #000;
@@ -1450,7 +1447,6 @@ body.rtl{
         width: 100%;
         margin-top: 0px;
         border: 1.0218px solid #DAE1F5;
-        font-family: 'Open Sans', sans-serif !important;
         color: #000 !important;
         font-size: 16px !important;
         font-weight: 400 !important;
@@ -1659,7 +1655,6 @@ input[type="text"].wpuf-google-map-search {
     background-color: #fff !important;
     text-overflow: ellipsis !important;
     width: 170px !important;
-    font-family: Roboto !important;
     font-size: 15px !important;
     font-weight: 300 !important;
     padding: 0 11px 0 13px !important;
